fix: SelectJet layout overflow bug

--- a/frontend/src/components/WrapperPage.module.scss
+++ b/frontend/src/components/WrapperPage.module.scss
@@ -1,5 +1,5 @@
 .wrapperPage {
-  padding: 3em 0 4em 0;
+  padding: 2.5em 0 4em 0;
   display: flex;
   justify-content: center;
 }
